2014-11-17 Daniel Zielinski <zielinski@loctimize.com>
	* [BUG] Fixed: CAT XML export of HTML content elements substituted < with &lt; in HTML elements making export unusable.
	* [BUG] Added correct version number to CAT XML export file in meta data.

2014-08-28 Markus Friedrich <markus.friedrich@dkd.de>
	* [FEATURE] TYPO3 6.2 support
	* [RELEASE] Version 3.6.0

2014-01-23 Hans Höchtl <hans.hoechtl@typovision.de>
	* [BUGFIX] Added missing require of BaseService in TCEMain-hook

2014-01-22 Lars Trebing <lars@trebing.name>
	* [BUGFIX] Provide the user with helpful information when the CLI import cannot read a file

2014-01-15 Lars Trebing <lars@trebing.name>
	* [FEATURE] Skip unaffected languages during import (performance improvement)
	* [FEATURE] Cache language array in tx_l10nmgr_tools (performance improvement)

2014-01-10 Lars Trebing <lars@trebing.name>
	* [BUGFIX] Remove redundant workspace constraint

2013-05-05 Andreas Otto <andreas@otto-hanika.de>
	* [FEATURE] Allows importing translations into default language.
	* [BUG] Various small bugfixes. _Check for already exported content_ works again and supports the CLI now.
	* [RELEASE] Version 3.4.50

2012-07-07 Andreas Otto <andreas@otto-hanika.de>
	* [BUG] Fixes #38702. CLI export doesn't work if source language is set to default language. Credits go to Jonas Renggli for investigating the issue and providing a patch.
	* [TASK] Enables export of EXCEL XML format using the CLI.
	* [TASK] Changes meta data of EXCEL XML template.
	* [RELEASE] Version 3.4.0

2012-07-01 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #38219. Display status icons [enable_stat_hook]. Credits go to Dietrich Heise for investigating the issue and providing a patch.
	* [~BUG] Fixes #38367. Option "New/Changed content only" not considered. Credits go to Markus Friedrich for investigating the issue and providing a patch.
	* [RELEASE] Version 3.3.16

2012-05-11 Andreas Otto <andreas@otto-hanika.de>