@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Module for managing localization import and export',
 	'category' => 'module',
 	'shy' => 0,
-	'version' => '3.6.1',
+	'version' => '3.6.2',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
