@@ -1,3 +1,7 @@
+2014-12-16 Daniel Zielinski <zielinski@loctimize.com>
+	* [BUG] Fixed: CAT XML export of HTML content elements contains non XML compliant entities making export unusable.
+	* [BUG] Added correct version number to CAT XML export file in meta data.
+
 2014-11-17 Daniel Zielinski <zielinski@loctimize.com>
 	* [BUG] Fixed: CAT XML export of HTML content elements substituted < with &lt; in HTML elements making export unusable.
 	* [BUG] Added correct version number to CAT XML export file in meta data.
